--- a/style.css
+++ b/style.css
@@ -95,3 +95,19 @@ hr {
     background-color: cornflowerblue;
     color: white;
   }
+
+/*Scroll Bar*/
+::-webkit-scrollbar {
+	width: 12px;
+	height: 0px;
+
+	}
+
+::-webkit-scrollbar-thumb {
+	background: cornflowerblue;  
+	border-radius: 10px;
+	}
+	
+	::-webkit-scrollbar-thumb:hover {
+	background: rgb(67, 111, 192);  
+	}
