--- a/style.css
+++ b/style.css
@@ -40,6 +40,25 @@ h1 a {
     text-decoration: none;
 }
 
+h2 { /*tags*/
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 32px;
+    color: cornflowerblue;
+    margin-bottom: 0px;
+}
+
+h2 a:hover {
+    background-color: cornflowerblue;
+    color: white;
+}
+
+h2 a {
+    color: cornflowerblue;
+    text-decoration: none;
+}
+
 hr {
     background: cornflowerblue;
     position: relative;
@@ -95,6 +114,10 @@ hr {
     background-color: cornflowerblue;
     color: white;
   }
+  
+  .pic {
+    width: 100%;
+  }
 
 /*Scroll Bar*/
 ::-webkit-scrollbar {
@@ -105,7 +128,7 @@ hr {
 
 ::-webkit-scrollbar-thumb {
 	background: cornflowerblue;  
-	border-radius: 10px;
+	border-radius: 0px;
 	}
 	
 	::-webkit-scrollbar-thumb:hover {
