--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ p {
 a {
     margin-left: -4px;
     padding-left: 4px;
-    padding-right: 4px;
+    padding-right: 6px;
 }
 
 h1 { /*big type for navigation and title*/
@@ -83,11 +83,39 @@ hr {
     display: inline-block;
 }
 
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: white;
+    margin: 0;
+    color: currentColor;
+    width: 34px;
+    height: 34px;
+    border: 3px solid currentColor;
+    transform: translateY(7px);
+    place-content: center;
+    display: grid;
+}
+
+input[type="checkbox"]::before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    transform: scale(0);
+    /* transition: 120ms transform ease-in-out; */
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    box-shadow: inset 20px 20px cornflowerblue;
+  }
+  
+  input[type="checkbox"]:checked::before {
+    transform: scale(1);
+  }
+
 .category {
-    clear: both;
-    list-style: none;
-    padding-inline-start: 0px;
+    margin-left: 100px;
     margin-bottom: 18px;
+    display: grid;
+    grid-template-columns: 1em auto;
   }
   .category li {
     display: inline-flex;
@@ -121,7 +149,7 @@ hr {
 
 /*Scroll Bar*/
 ::-webkit-scrollbar {
-	width: 12px;
+	width: 14px;
 	height: 0px;
 
 	}
