--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h2 a:hover {
 }
 
 h2 a {
-    color: cornflowerblue;
+    color: rgb(62, 114, 212);
     text-decoration: none;
 }
 
@@ -74,6 +74,7 @@ h3 { /*annotationt*/
 }
 
 hr {
+    width: 100%;
     background: cornflowerblue;
     position: relative;
     border: none;
