--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 * {
     margin-top: 2px;
     cursor: url('default.png'),auto;
+    box-sizing: border-box;
 }
 
 /*Type*/
@@ -231,6 +232,59 @@ input[type="checkbox"]::before {
 	::-webkit-scrollbar-thumb:hover {
 	background: rgb(67, 111, 192);  
 	}
+
+
+/*Picture Slide*/
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  position: relative;
+  margin: auto;
+  text-align: center;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: url('pointer.png') 15 0,auto;
+  position: absolute;
+  top: 45%;
+  width: auto;
+  height: auto;
+  margin-top: -22px;
+  padding: 4px;
+  color: cornflowerblue;
+  font-family: 'Inter', sans-serif;
+  font-size: 38px;
+  user-select: none;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+.prev:hover, .next:hover {
+  color: white;
+  background-color: cornflowerblue;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: 0} 
+  to {opacity: 1}
+}
 
 
 
