--- a/style.css
+++ b/style.css
@@ -220,6 +220,24 @@ input[type="checkbox"]::before {
     display: block;
   }
 
+  .pic31 {
+    width: 31.8%;
+    display: inline-block;
+  }
+
+  .pic32 {
+    width: 31.8%; 
+    display: inline-block; 
+    margin-left: 1.2vw; 
+    margin-right: 1vw;
+  }
+
+  .pic33 {
+    width: 31.8%; 
+    display: block; 
+    float: right;
+  }
+
 
 
 /*Scroll Bar*/
