--- a/style.css
+++ b/style.css
@@ -366,6 +366,18 @@ input[type="checkbox"]::before {
       width: 12px;
       height: 12px;
   }
+
+  .info1 {
+    width: 19%;
+  }
+  
+  .info2 {
+    width: 25%;
+  }
+  
+  .info3 {
+    width: 50%;
+  }
 }
 
 @media screen and (max-width: 970px) {
