--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@ p {
 }
 
 a {
-    margin-left: -4px;
-    padding-left: 4px;
-    padding-right: 6px;
     height: 100%;
     text-decoration: none;
     cursor: url('pointer.png') 15 0,auto;
@@ -35,9 +32,13 @@ h1 { /*big type for navigation and title*/
     margin-bottom: 0px;
 }
 
-h1 a:hover {
+h1 a:hover, h2 a:hover, .back:hover {
     background-color: cornflowerblue;
     color: white;
+    margin-left: -4px;
+    margin-right: -6px;
+    padding-left: 4px;
+    padding-right: 6px;
 }
 
 h1 a {
@@ -54,11 +55,6 @@ h2 { /*intro text*/
     margin-bottom: 0px;
 }
 
-h2 a:hover {
-    background-color: cornflowerblue;
-    color: white;
-}
-
 h2 a {
     color: rgb(62, 114, 212);
     text-decoration: none;
@@ -69,7 +65,7 @@ h3 { /*annotationt*/
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
-  color: rgb(110, 110, 110);
+  color: cornflowerblue;
   margin-bottom: 0px;
   z-index: 1;
   position: relative;
@@ -238,6 +234,29 @@ input[type="checkbox"]::before {
     float: right;
   }
 
+  .slide {
+    width: 100%;
+    height: 82vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    border: 3px solid cornflowerblue;
+  }
+
+  .back {
+    cursor: url('pointer.png') 15 0,auto;
+    float: right;
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    font-size: 38px;
+    line-height: 46px;
+    color: cornflowerblue;
+    margin-bottom: 0px;
+  }
+
+  .upper {
+    margin-top: -46px;
+  }
+
 
 
 /*Scroll Bar*/
@@ -327,7 +346,7 @@ input[type="checkbox"]::before {
 
 /*Screen Adaptation*/
 @media screen and (max-width: 1620px) {
-  h1 {
+  h1, .back {
     font-size: 32px;
     line-height: 40px;
   }
@@ -345,6 +364,10 @@ input[type="checkbox"]::before {
   input[type="checkbox"]::before {
       width: 16px;
       height: 16px;
+  }
+
+  .upper {
+    margin-top: -40px;
   }
 }
 
@@ -415,5 +438,15 @@ input[type="checkbox"]::before {
     width: 100%;
     display: inline-block;
     vertical-align: top;
+  }
+
+  .back {
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: -8px;
+  }
+
+  .upper {
+    display: none;
   }
 }
