--- a/style.css
+++ b/style.css
@@ -185,6 +185,31 @@ input[type="checkbox"]::before {
     background-color: cornflowerblue;
     color: white;
   }
+
+  .filter {
+    width: 76.9%;
+    margin-left: 23.1%;
+  }
+
+  .filter img{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+
+  .filter h2{
+    width: calc((100% - 8px - 3.6%) /3);
+    height: calc((76vw - 8px - 4vw) /3);
+    display: none;
+    margin-top: 0px;
+    margin-left: 1.2%;
+    margin-bottom: 1.4%;
+  }
+
+  .album img, .poster img, .video img, .editorial img, .modeling img, .branding img {
+    margin-bottom: -1px;
+  }
   
   .pica {
     cursor: url('pointer.png') 15 0,auto;
@@ -218,19 +243,19 @@ input[type="checkbox"]::before {
   }
 
   .pic31 {
-    width: calc(100% / 3 - 1.05%);
+    width: calc((100% - 8px - 2.4%) /3);
     display: inline-block;
   }
 
   .pic32 {
-    width: calc(100% / 3 - 1.05%); 
+    width: calc((100% - 8px - 2.4%) /3); 
     display: inline-block; 
     margin-left: 1.2%; 
     margin-right: 1.2%;
   }
 
   .pic33 {
-    width: calc(100% / 3 - 1.05%); 
+    width: calc((100% - 8px - 2.4%) /3); 
     display: block; 
     float: right;
   }
