--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap');
 
+:root {
+    --main: cornflowerblue;
+    --darker: rgb(62, 114, 212);
+}
+
 * {
     margin-top: 2px;
     cursor: url('default.png'),auto;
@@ -28,17 +33,17 @@ h1 { /*big type for navigation and title*/
     font-weight: 300;
     font-size: 36px;
     line-height: 44px;
-    color: cornflowerblue;
+    color: var(--main);
     margin-bottom: 0px;
 }
 
 h1 a:hover, h2 a:hover, .back:hover {
-    background-color: cornflowerblue;
+    background-color: var(--main);
     color: white;
 }
 
 h1 a {
-    color: cornflowerblue;
+    color: var(--main);
     text-decoration: none;
 }
 
@@ -52,12 +57,12 @@ h2 { /*intro text*/
     font-weight: 300;
     font-size: 18px;
     line-height: 24px;
-    color: rgb(62, 114, 212);
+    color: var(--darker);
     margin-bottom: 0px;
 }
 
 h2 a {
-    color: rgb(62, 114, 212);
+    color: var(--darker);
     text-decoration: none;
 }
 
@@ -66,27 +71,42 @@ h3 { /*annotationt*/
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
-  color: cornflowerblue;
+  color: var(--main);
   margin-bottom: 0px;
   z-index: 1;
   position: relative;
 }
 
 hr {
-    width: 100%;
-    background: cornflowerblue;
-    position: relative;
-    border: none;
-    margin-top: 14px;
-    margin-bottom: 16px;
-    height: 3px;
+  width: 100%;
+  background: var(--main);
+  position: relative;
+  border: none;
+  margin-top: 14px;
+  margin-bottom: 16px;
+  height: 3px;
 }
 
 .disable {
   pointer-events: none;
   user-select: none;
   color: rgb(200, 219, 254);
+  border-color: rgb(200, 219, 254) !important;
 }
+
+.button {
+  border: 3px solid var(--main);
+  padding: 2px 8px;
+  width: fit-content;
+  display: inline-block;
+}
+
+.button:hover {
+  background-color: var(--main);
+  color: white;
+  cursor: url('pointer.png') 15 0,auto;
+}
+
 
 /*Page Segments*/
 .navigation {
@@ -147,7 +167,7 @@ input[type="checkbox"]::before {
     transform: scale(0);
     /* transition: 120ms transform ease-in-out; */
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-    box-shadow: inset 20px 20px cornflowerblue;
+    box-shadow: inset 20px 20px var(--main);
   }
   
   input[type="checkbox"]:checked::before {
@@ -172,7 +192,7 @@ input[type="checkbox"]::before {
     font-weight: 300;
     font-size: 40px;
     line-height: 48px;
-    color: cornflowerblue;
+    color: var(--main);
   }
   .category li::before {
     position: relative;
@@ -182,8 +202,16 @@ input[type="checkbox"]::before {
   }
 
   .category li:hover {
-    background-color: cornflowerblue;
+    background-color: var(--main);
     color: white;
+  }
+
+  #all {
+    margin-left: 100px;
+  }
+
+  #clear {
+    margin-left: 20px;
   }
 
   #album, #poster, #video, #editorial, #modeling, #branding {
@@ -221,7 +249,7 @@ input[type="checkbox"]::before {
   }
 
   .pica:hover, .videoa:hover {
-    box-shadow: 0 0 0 3px cornflowerblue;
+    box-shadow: 0 0 0 3px var(--main);
   }
 
   .pic {
@@ -272,7 +300,7 @@ input[type="checkbox"]::before {
     float: right;
     overflow-y: scroll;
     overflow-x: hidden;
-    border: 3px solid cornflowerblue;
+    border: 3px solid var(--main);
   }
 
   .back {
@@ -282,7 +310,7 @@ input[type="checkbox"]::before {
     font-weight: 300;
     font-size: 38px;
     line-height: 46px;
-    color: cornflowerblue;
+    color: var(--main);
     margin-bottom: 0px;
   }
 
@@ -299,7 +327,7 @@ input[type="checkbox"]::before {
 	}
 
 ::-webkit-scrollbar-thumb {
-	background: cornflowerblue;  
+	background: var(--main);  
 	border-radius: 0px;
 	}
 	
@@ -331,7 +359,7 @@ input[type="checkbox"]::before {
   height: auto;
   margin-top: -22px;
   padding: 4px;
-  color: cornflowerblue;
+  color: var(--main);
   font-family: 'Inter', sans-serif;
   font-size: 38px;
   user-select: none;
@@ -347,7 +375,7 @@ input[type="checkbox"]::before {
 
 .prev:hover, .next:hover {
   color: white;
-  background-color: cornflowerblue;
+  background-color: var(--main);
 }
 
 .fade {
@@ -384,7 +412,7 @@ input[type="checkbox"]::before {
     line-height: 38px;
   }
 
-  .category {
+  .category, #all {
     margin-left: 80px;
   }
 
@@ -405,10 +433,20 @@ input[type="checkbox"]::before {
 }
 
 @media screen and (max-width: 1360px) {
-  .category {
+  .category, #all {
     font-size: 22px;
     line-height: 28px;
     margin-left: 60px;
+  }
+
+  #clear {
+    font-size: 22px;
+    line-height: 28px;
+    margin-left: 10px;
+  }
+
+  .button {
+    border: 2px solid var(--main);
   }
 
   input[type="checkbox"] {
@@ -436,7 +474,7 @@ input[type="checkbox"]::before {
   }
 }
 
-@media screen and (max-width: 970px) {
+@media screen and (max-width: 1010px) {
   .vnavigation {
     display: block;
   }
