--- a/style.css
+++ b/style.css
@@ -107,6 +107,24 @@ hr {
   cursor: url('pointer.png') 15 0,auto;
 }
 
+ul {
+  padding-left:1.5em
+}
+
+li {
+  list-style-type: '⟶';
+  padding-left: 0.6em;
+}
+
+.ul2 {
+  padding-left: 1.5em
+}
+
+.li2 {
+  display: list-item;
+  padding-left: 0.6em;
+}
+
 
 /*Page Segments*/
 .navigation {
