--- a/style.css
+++ b/style.css
@@ -247,11 +247,11 @@ input[type="checkbox"]::before {
     height: 100%;
     overflow: hidden;
     object-fit: cover;
-  }
+  }x
 
   .filter h2{
-    width: calc((100% - 8px - 3.6%) /3);
-    height: calc((76vw - 8px - 4vw) /3);
+    width: calc((100% - 12px - 3.6%) /3);
+    height: calc((76vw - 12px - 4vw) /3);
     display: none;
     margin-top: 0px;
     margin-left: 1.2%;
