--- a/components/projectTemplate.html
+++ b/components/projectTemplate.html
@@ -40,8 +40,9 @@
     <br><hr>
     <div id="project-media"></div>
     <hr>
-    <div style="float: right; padding-bottom: 8px;">
+    <div class="hoverZoomRight" style="float: right; padding-bottom: 8px;">
       <h1 onclick="history.back()" class="back">&#8592 Go Back</h1>
+      <br><br>
     </div>
   </main>
 </div>
