--- a/styles/base.css
+++ b/styles/base.css
@@ -77,7 +77,17 @@ img {
     width: 100%;
 }
 
+.hoverZoom:hover {
+    transform: scale(1.05);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+}
 
+.hoverZoomRight:hover {
+    transform: scale(1.01);
+    transform-origin: right;
+    transition: transform 0.3s ease;
+}
 
 
 
