--- a/components/projectTemplate.html
+++ b/components/projectTemplate.html
@@ -18,23 +18,25 @@
     <div class="data-block" data-field="collaborator"></div>
 
     <div class="individual-container">
+      <div class="top-row">
         <div class="title-col">
-            <h3 id="title-category">Category:</h3>
-            <h3 id="title-date">Date:</h3>
-            <h3 id="title-dimension">Dimension:</h3>
-            <h3 id="title-collaborator">Collaborator:</h3>
+          <h3 id="title-category">Category:</h3>
+          <h3 id="title-date">Date:</h3>
+          <h3 id="title-dimension">Dimension:</h3>
+          <h3 id="title-collaborator">Collaborator:</h3>
         </div>
-      
+
         <div class="info-col">
-            <h3 id="medium"></h3>
-            <h3 id="date"></h3>
-            <h3 id="dimension"></h3>
-            <h3 id="collaborator"></h3>
+          <h3 id="medium"></h3>
+          <h3 id="date"></h3>
+          <h3 id="dimension"></h3>
+          <h3 id="collaborator"></h3>
         </div>
-      
-        <div class="description-col">
-            <h3 id="project-description"></h3>
-        </div>
+      </div>
+
+      <div class="description-col">
+        <h3 id="project-description"></h3>
+      </div>
     </div>
 
     <br><hr>
