--- a/styles/home.css
+++ b/styles/home.css
@@ -12,8 +12,7 @@
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
     position: relative;
     margin-top: calc(var(--body-padding) * 0.5);
     margin-bottom: calc(var(--body-padding) * 1);
