--- a/styles/archive.css
+++ b/styles/archive.css
@@ -6,6 +6,14 @@
     box-sizing: border-box;
   }
 
+.contentpc {
+    display: block;
+}
+
+.contentphone {
+    display: none;
+}
+
 .content > * {
     margin-bottom: var(--gap);
     break-inside: avoid;
@@ -125,9 +133,14 @@
 
 
   @media screen and (max-width: 768px) {
-    .content {
-      columns: 2;
-      column-gap: var(--gap);
+    .contentpc {
+        display: none;
+    }
+
+    .contentphone {
+        display: block;
+        columns: 2;
+        column-gap: var(--gap);
     }
 
     .lightbox-image {
