update archive filter hide

--- a/components/navigation.html
+++ b/components/navigation.html
@@ -6,23 +6,27 @@
           <span class="nav-label-mobile">Selected Works</span>
         </a>
     </h1>
-    <hr>
-    <div class="category">
-        <label class="hoverZoom"><input type="checkbox" id="brandingc"> Visual Identity</label>
-        <label class="hoverZoom"><input type="checkbox" id="websitec"> Website</label>
-        <label class="hoverZoom"><input type="checkbox" id="printedc"> Printed Matter</label>
-        <label class="hoverZoom"><input type="checkbox" id="movingc"> Moving Image</label>
-        <label class="hoverZoom"><input type="checkbox" id="albumc"> Album</label>
-        <label class="hoverZoom"><input type="checkbox" id="modelingc"> 3D Modeling</label>
-    </div>       
-    <div class="filter-controls">
-        <button id="all" class="hoverZoom">All</button>
-        <button id="clear" class="hoverZoom">Clear</button>
+
+    <div class="work-categories">
+        <hr>
+        <div class="category">
+            <label class="hoverZoom"><input type="checkbox" id="brandingc"> Visual Identity</label>
+            <label class="hoverZoom"><input type="checkbox" id="websitec"> Website</label>
+            <label class="hoverZoom"><input type="checkbox" id="printedc"> Printed Matter</label>
+            <label class="hoverZoom"><input type="checkbox" id="movingc"> Moving Image</label>
+            <label class="hoverZoom"><input type="checkbox" id="albumc"> Album</label>
+            <label class="hoverZoom"><input type="checkbox" id="modelingc"> 3D Modeling</label>
+        </div>       
+        <div class="filter-controls">
+            <button id="all" class="hoverZoom">All</button>
+            <button id="clear" class="hoverZoom">Clear</button>
+        </div>
+        <hr>
     </div>
-    <hr>
+
     <h1>
-        <a id="archive" class="hoverZoom">Archive</a>
         <a id="about" class="hoverZoom">About</a>
+        <a id="archive" class="hoverZoom">Archive</a>
         <a href="mailto:valialiuwork@gmail.com" class="hoverZoom">
             Email<span class="no-emoji-arrow">&#8599;</span>
         </a>
