--- a/styles/base.css
+++ b/styles/base.css
@@ -140,7 +140,7 @@ p {
 }
 
 .no-emoji-arrow {
-    font-family: "Courier", "Georgia", "Times New Roman", serif;
+    font-family: "inter", "Georgia", "Times New Roman", serif;
     font-weight: lighter;
 }
 
